--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -5,77 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
 
-    <style>
-        body{
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-
-            width: 98vw;
-            height: 98vh;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #container{
-            width: 90vw;
-            height: 80vh;
-
-            display: flex;
-            justify-content: space-between;
-            gap: 1%;
-        }
-
-        div{
-            width: 8%;
-            border-radius: 30px;
-
-            background-repeat: no-repeat;
-            background-size: cover;
-
-            display: flex;
-            align-items: end;
-            padding-left:2% ;
-            padding-bottom: 1.5%;
-
-            transition: 1s;            
-            cursor: pointer;
-
-            color: transparent;
-        }
-
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        h2{
-            margin: 0;
-        }
-
-        #container>div:nth-child(1){
-            background-image: url(images/nature1.jpg);
-        }
-        #container>div:nth-child(2){
-            background-image: url(images/nature2.jpg);
-        }
-        #container>div:nth-child(3){
-            background-image: url(images/nature3.jpg);
-        }
-        #container>div:nth-child(4){
-            background-image: url(images/nature4.jpg);
-        }
-        #container>div:nth-child(5){
-            background-image: url(images/nature5.jpg);
-        }
-
-        .clicked{
-            width: 75%;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main id="container">
